Fix Message Status Tick

--- a/app/src/main/res/layout/activity_home_main_screen.xml
+++ b/app/src/main/res/layout/activity_home_main_screen.xml
@@ -70,6 +70,7 @@
         android:layout_alignParentBottom="true"
         android:background="@color/bottom_navbar_background_color"
         android:paddingBottom="4dp"
+        android:paddingTop="4dp"
         app:itemIconTint="@color/color_item_bottom_nav"
         app:itemTextColor="@color/color_item_bottom_nav"
         app:menu="@menu/main_screen_bottom_nav" />
